--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,41 @@
-<ion-menu [content]="content">
+<ion-menu [content]="mainContent">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+      <ion-title>
+        Menu
+      </ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <ion-content>
-    <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
+  <ion-content id="side-menu21">
+    <ion-list id="menu-list3">
+      <ion-item color="dark" id="menu-list-item7">
+        <ion-avatar item-left>
+          <img />
+        </ion-avatar>
+        <h2>
+          User Info
+        </h2>
+      </ion-item>
+    </ion-list>
+    <ion-list id="menu-list4">
+      <ion-item color="none" id="menu-list-item15">
+        <ion-icon name="settings" item-left></ion-icon>
+        Settings
+      </ion-item>
+      <ion-item color="none" id="menu-list-item14">
+        <ion-icon name="star" item-left></ion-icon>
+        Favorites
+      </ion-item>
+      <ion-item color="none" id="menu-list-item16">
+        <ion-icon name="information" item-left></ion-icon>
+        About
+      </ion-item>
+      <ion-item color="none" id="menu-list-item17">
+        <ion-icon name="log-out" item-left></ion-icon>
+        Logout
+      </ion-item>
     </ion-list>
   </ion-content>
-
 </ion-menu>
 
-<!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav #mainContent [root]="rootPage"></ion-nav>
