add pages style

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -30,7 +30,7 @@
         <ion-icon name="information" item-left></ion-icon>
         About
       </ion-item>
-      <ion-item color="none" id="menu-list-item17">
+      <ion-item color="none" id="menu-list-item17" (click)="doLogout()">
         <ion-icon name="log-out" item-left></ion-icon>
         Logout
       </ion-item>
