--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -1,3 +1,21 @@
 page-map {
-
+  /* Optional: Makes the sample page fill the window. */
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  #map {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 150ms ease-in;
+    display: block;
+    &.show-map{
+      opacity: 1;
+    }
+  }
+  .content, .scroll-content{
+    padding: 0px !important;
+  }
 }
