--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,14 +1,9 @@
 <ion-menu [content]="mainContent">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>
-        Menu
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
   <ion-content >
+
     <ion-list >
-      <ion-item color="secondary" >
+      <ion-item color="dark" >
         <ion-avatar item-left>
           <img src="{{profileProvider.profile.photo}}"/>
         </ion-avatar>
@@ -17,24 +12,26 @@
         </h2>
       </ion-item>
     </ion-list>
-    <ion-list >
-      <ion-item color="none">
-        <ion-icon name="settings" item-left></ion-icon>
+
+    <ion-list inset>
+      <button ion-item icon-start >
+        <ion-icon name="settings"></ion-icon>
         Cuenta
-      </ion-item>
-      <ion-item color="none">
-        <ion-icon name="star" item-left></ion-icon>
+      </button>
+      <button ion-item icon-start >
+        <ion-icon name="star"></ion-icon>
         Favoritos
-      </ion-item>
-      <ion-item color="none">
-        <ion-icon name="information" item-left></ion-icon>
+      </button>
+      <button ion-item icon-start>
+        <ion-icon name="ios-information-circle"></ion-icon>
         Mas informacion
-      </ion-item>
-      <ion-item color="none" (click)="doLogout()">
-        <ion-icon name="log-out" item-left></ion-icon>
+      </button>
+      <button ion-item icon-start (click)="doLogout()">
+        <ion-icon name="log-out"></ion-icon>
         Cerrar sesion
-      </ion-item>
+      </button>
     </ion-list>
+
   </ion-content>
 </ion-menu>
 
