add style real route

--- a/src/pages/route-real-time/route-real-time.scss
+++ b/src/pages/route-real-time/route-real-time.scss
@@ -3,4 +3,13 @@ page-route-real-time {
     background-color: #3c3b3b;
     padding: 0px !important;
   }
+
+  ion-icon{
+    font-size: 2.2em;
+    margin: auto;
+  }
+
+  .pros{
+    padding: 10px;
+  }
 }
