--- a/src/pages/result-routes/result-routes.scss
+++ b/src/pages/result-routes/result-routes.scss
@@ -1,6 +1,6 @@
 page-result-routes {
-  .scroll-content{    
-    background-color: #3c3b3b;
+  .scroll-content{
+    background-image: url("../assets/img/bg.png");
   }
 
   ion-icon{
